Fix padding issue introduced by my_fr2 clipping icon. Padding shouldn't apply on pages where there isn't the ability to clip - public inspection and regulations (RIN) pages.

--- a/app/stylesheets/design/_page.scss
+++ b/app/stylesheets/design/_page.scss
@@ -362,8 +362,7 @@ ARTICLE VIEW
   top: -2px;
   overflow:visible;
   }   
-.metadata_share_bar .share ul li:first-child,
-.metadata_share_bar .share ul li.first {
+.metadata_share_bar .share ul li.clip_for_later {
   padding-right: 35px;
   }
 
